# strawberry

./: CMakeLists.txt  PKGBUILD
data/icons/: CMakeLists.txt
src/core/: mainwindow.cpp  song.cpp
src/systemtrayicon/: qtsystemtrayicon.cpp  systemtrayicon.cpp
